# ising

./: AUTHORS  Makefile.am  Makefile.in  README.html  README.md  aclocal.m4  autogen.sh  configure  configure.ac
config/: config.h.in
include/: Makefile.am  Makefile.in  fileio.h  memory.h  r1279.h  random_num.h  statistics.h
lib/: Makefile.am  Makefile.in  fileio.c  memory.c  r1279.c  random_num.c  statistics.c
scripts/: Makefile.am  Makefile.in  PartA3.sh  PartA3plot.gnu  PartA5.sh  PartA5plot1.gnu  PartA5plot2.gnu  PartA6.sh  PartA6plot.gnu  PartA7.sh  PartA7plot1.gnu  PartA7plot2.gnu  PartB1.sh  PartB2.sh  PartB2plot1.gnu  PartB2plot2.gnu  PartB2plot3.gnu  PartB3.sh  PartB3plot1.gnu  PartB3plot2.gnu  PartB4.sh  PlotState.gnu  dibuix_rmig.gnu  grafiques.gnu  mycut
src/: Makefile.am  Makefile.in  autocorr.c  binning.c  ising.c  jackknife.c  tauint.c
tools/: Makefile.am  Makefile.in
tools/Ferdinand/: constants.par  ferdinand.f  implicit.sta
