dnl Process this file with autoconf to produce a configure script.
AC_INIT(ising, 3.0,sergioller@gmail.com)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR(src/ising.c)
AC_CONFIG_MACRO_DIR([m4])
AC_PREFIX_DEFAULT([$PWD/install])
AM_CONFIG_HEADER(config/config.h)
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_PROG_RANLIB
AC_OUTPUT(Makefile src/Makefile include/Makefile lib/Makefile scripts/Makefile tools/Makefile)

