EXTRA_DIST = dibuix_rmig.gnu  PartA5plot1.gnu  PartA7plot2.gnu  PartB2.sh \
	grafiques.gnu    PartA5plot2.gnu  PartA7.sh        PartB3plot1.gnu \
	PartA5.sh        PartB1.sh        PartB3plot2.gnu \
	PartA6plot.gnu   PartB2plot1.gnu  PartB3.sh \
	PartA3plot.gnu   PartA6.sh        PartB2plot2.gnu  PartB4.sh \
	PartA3.sh        PartA7plot1.gnu  PartB2plot3.gnu  PlotState.gnu

bin_SCRIPTS = mycut

